--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,14 +1,26 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .navbar
+    margin-bottom: 5rem
 @media (max-width: 992px)
   .container
     max-width: 760px
   .logo
     margin-right: 40px
+  h2
+    font-size: 28px
+    line-height: 34px
+    margin-bottom: 2rem
+  .about
+    &__title
+      padding: 0 60px
 @media (max-width: 768px)
   .container
     max-width: 576px
+  h1
+    font-size: 40px
+    line-height: 52px
 @media (max-width: 576px)
   .logo
     width: 99px
