--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -28,9 +28,11 @@ body
   font-family: 'Montserrat', sans-serif
   background-color: $secondary
   color: $text-color
+  
 .container
   margin: 0 auto
   max-width: 1170px
+  overflow-x: hidden
 h1
   font-weight: 900
   font-size: 48px
