--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -2,6 +2,7 @@
   background-image: url(../img/first-screen.jpg)
   background-repeat: no-repeat
   background-position: top
+  background-size: cover
   margin: auto
   min-height: 900px
   margin-bottom: 7rem
@@ -11,8 +12,7 @@
     align-items: center
     justify-content: space-between
   &-menu
-    margin: 0
-    margin-left: 40px // без этого лого приклеивается к меню
+    margin: 0 40px // без этого лого приклеивается к меню
     display: flex
     align-items: center
     min-width: 573px
@@ -67,6 +67,3 @@
   flex-direction: column
   margin-top: 10rem
   color: $light
-
-  
-
